--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
@@ -85,6 +85,9 @@
             </div>
         </div>
 
+        <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-outline-primary" value="Add" />
+
+
 
     </form>
 </div>
