--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
@@ -85,7 +85,8 @@
             </div>
         </div>
 
-        <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-outline-primary" value="Add" />
+        <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Add" />
+        <a asp-action="edit" asp-controller="spaceships" class="btn btn-primary">Edit</a>
 
 
 
