--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
@@ -1,6 +1,12 @@
 ﻿@model TARge21Shop.Models.Spaceship.SpaceshipEditViewModel
 
-<h1>Add</h1>
+@if (Model.Id.HasValue)
+{
+    <h1>Update</h1>
+} else {
+    <h1>Add</h1>
+}
+
 
 <div>
     <form method="post" enctype="multipart/form-data">
@@ -85,10 +91,17 @@
             </div>
         </div>
 
-        <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Add" />
-        <a asp-action="edit" asp-controller="spaceships" class="btn btn-primary">Edit</a>
 
+        <!-- <a asp-action="edit" asp-controller="spaceships" class="btn btn-primary">Edit</a> -->      
 
+        @if (Model.Id.HasValue)
+        {
+            <input asp-action="Update" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Update" />
+        }
+        else
+        {
+            <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Add" />
+        }
 
     </form>
 </div>
