--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Edit.cshtml
@@ -90,6 +90,7 @@
                 <input asp-for="BuiltDate" class="form-control" />
             </div>
         </div>
+        <hr/>
 
 
         <!-- <a asp-action="edit" asp-controller="spaceships" class="btn btn-primary">Edit</a> -->      
@@ -102,6 +103,9 @@
         {
             <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Add" />
         }
+
+        <a asp-action="index" class="btn btn-primary">Index</a>
+        
 
     </form>
 </div>
