--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Details.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Details.cshtml
@@ -80,4 +80,9 @@
 
     <a asp-action="Index" asp-controller="spaceships" class="btn btn-primary">Index</a>
 
+    dev
+    dev
+    dev
+    dev
+
 </div>
