--- a/TARge21Shop/TARge21Shop/Views/Car/Delete.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Car/Delete.cshtml
@@ -70,7 +70,9 @@
         <form asp-action="DeleteConfirmation">
             <input type="hidden" asp-for="Id" />
             <input type="submit" value="Delete" class="btn btn-danger" />
+            <a asp-action="Index" asp-controller="car" class="btn btn-primary">Index</a>
         </form>
+        
 
 
 </div>
