--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Details.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Details.cshtml
@@ -78,6 +78,6 @@
 
     </dl>
 
-    <a asp-action="Index" asp-controller="spaceships" class="btn btn-primary">Index</a>
+    <a asp-action="Index" asp-controller="spaceships" class="btn btn-primary">Back</a>
 
 </div>
