--- a/TARge21Shop/TARge21Shop/Views/Spaceships/Details.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Spaceships/Details.cshtml
@@ -76,6 +76,12 @@
             @Html.DisplayFor(model => model.ModifiedAt)
         </div>
 
+        @foreach (var images in Model.Image)
+        {
+            <partial name="_Images" model="images" />
+        }
+
+
     </dl>
 
     <a asp-action="Index" asp-controller="spaceships" class="btn btn-primary">Back</a>
