--- a/TARge21Shop/TARge21Shop/Views/Cars/CreateUpdate.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Cars/CreateUpdate.cshtml
@@ -105,7 +105,7 @@
         @foreach (var images in Model.Image)
         {
             <partial name="_Images" model="images" />
-            <input asp-action="removeImage" asp-controller="spaceships" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-outline-danger" value="Remove Image" />
+            <input asp-action="removeImage" asp-controller="cars" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-outline-danger" value="Remove Image" />
         }
 
         <hr />
