--- a/TARge21Shop/TARge21Shop/Views/Shared/_Layout.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Spaceships" asp-action="Index">Spaceship</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="RealEstates" asp-action="Index">Real Estate</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">Car</a>
                         </li>
