--- a/TARge21Shop/TARge21Shop/Views/Cars/_Images.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Cars/_Images.cshtml
@@ -1,7 +1,8 @@
-﻿@model TARge21Shop.Models.Spaceship.ImageViewModel
+﻿@model TARge21Shop.Models.Car.ImageViewModel
 
 <div class="form-group row col-sm-4 offset-2">
     <div>@Model.ImageTitle</div>
     <img class="card-img-top" src="@Model.Image" asp-append-version="true" />
-    
+
 </div>
+
