--- a/TARge21Shop/TARge21Shop/Views/Cars/Delete.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Cars/Delete.cshtml
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group row">
-            <label asp-for="EnginePower" class="col-sm-2 col-form-label"></label>
+            <label asp-for="EnginePower" class="col-sm-2 col-form-label">Engine Power</label>
             @Html.DisplayFor(model => model.EnginePower)
         </div>
 
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group row">
-            <label asp-for="MaxSpeed" class="col-sm-2 col-form-label"></label>
+            <label asp-for="MaxSpeed" class="col-sm-2 col-form-label">Max Speed</label>
             @Html.DisplayFor(model => model.MaxSpeed)
         </div>
 
@@ -52,27 +52,27 @@
         </div>
 
         <div class="form-group row">
-            <label asp-for="FuelType" class="col-sm-2 col-form-label"></label>
+            <label asp-for="FuelType" class="col-sm-2 col-form-label">Fuel Type</label>
             @Html.DisplayFor(model => model.FuelType)
         </div>
 
         <div class="form-group row">
-            <label asp-for="FuelConsumption" class="col-sm-2 col-form-label"></label>
+            <label asp-for="FuelConsumption" class="col-sm-2 col-form-label">Fuel Consumption</label>
             @Html.DisplayFor(model => model.FuelConsumption)
         </div>
 
         <div class="form-group row">
-            <label asp-for="BuiltDate" class="col-sm-2 col-form-label"></label>
+            <label asp-for="BuiltDate" class="col-sm-2 col-form-label">Built Date</label>
             @Html.DisplayFor(model => model.BuiltDate)
         </div>
 
         <div class="form-group row">
-            <label asp-for="CreatedAt" class="col-sm-2 col-form-label"></label>
+            <label asp-for="CreatedAt" class="col-sm-2 col-form-label">Created At</label>
             @Html.DisplayFor(model => model.CreatedAt)
         </div>
 
         <div class="form-group row">
-            <label asp-for="ModifiedAt" class="col-sm-2 col-form-label"></label>
+            <label asp-for="ModifiedAt" class="col-sm-2 col-form-label">Modified At</label>
             @Html.DisplayFor(model => model.ModifiedAt)
         </div>
 
@@ -89,6 +89,6 @@
 <form asp-action="DeleteConfirmation">
     <input type="hidden" asp-for="Id" />
     <input type="submit" value="Delete" class="btn btn-danger" />
-    <a asp-action="index" asp-controller="cars" class="btn btn-success">Back</a>
+    <a asp-action="index" asp-controller="cars" class="btn btn-primary">Back</a>
 </form>
 
