--- a/TARge21Shop/TARge21Shop/Views/Cars/Index.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/Cars/Index.cshtml
@@ -18,9 +18,11 @@
             <tr>
                 <th scope="col">Nr</th>
                 <th scope="col">Name</th>
-                <th scope="col">EnginePower</th>
-                <th scope="col">Mileage</th>
+                <th scope="col">Engine Power(kW)</th>
+                <th scope="col">Mileage(km)</th>
                 <th scope="col">Fuel Type</th>
+                <th scope="col">Fuel Consumption</th>
+                <th scope="col">BuiltDate</th>
                 <th></th>
             </tr>
         </thead>
@@ -34,6 +36,8 @@
                     <td>@car.EnginePower</td>
                     <td>@car.Mileage</td>
                     <td>@car.FuelType</td>
+                    <td>@car.FuelConsumption</td>
+                    <td>@car.BuiltDate.ToShortDateString()</td>
                     <td>
                         <a asp-action="details" asp-controller="cars" asp-route-id="@car.Id" class="btn btn-info">Details</a>
                         <a asp-action="update" asp-controller="cars" asp-route-id="@car.Id" class="btn btn-primary">Update</a>
