--- a/TARge21Shop/TARge21Shop/Views/RealEstates/CreateUpdate.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/RealEstates/CreateUpdate.cshtml
@@ -39,7 +39,7 @@ else
         </div>
 
         <div class="form-group row">
-            <label asp-for="PostalCode" class="col-sm-2 col-form-label"></label>
+            <label asp-for="PostalCode" class="col-sm-2 col-form-label">Postal Code</label>
             <div class="col-sm-10">
                 <input asp-for="PostalCode" class="form-control" />
             </div>
@@ -84,7 +84,7 @@ else
             </div>
         </div>
         <div class="form-group row">
-            <label asp-for="RoomCount" class="col-sm-2 col-form-label"></label>
+            <label asp-for="RoomCount" class="col-sm-2 col-form-label">Room Count</label>
             <div class="col-sm-10">
                 <input asp-for="RoomCount" class="form-control" />
             </div>
@@ -111,11 +111,11 @@ else
 
         @if (Model.Id.HasValue)
         {
-            <input asp-action="update" asp-controller="realEstates" type="submit" class=" btn btn-primary" value="Update" />
+            <input asp-action="update" asp-controller="RealEstates" type="submit" class=" btn btn-primary" value="Update" />
         }
         else
         {
-            <input asp-action="create" asp-controller="realEstates" type="submit" class=" btn btn-primary" value="Create" />
+            <input asp-action="create" asp-controller="RealEstates" type="submit" class=" btn btn-primary" value="Create" />
         }
 
         <a asp-action="index" class="btn btn-primary">Back</a>
