--- a/TARge21Shop/TARge21Shop/Views/RealEstates/Details.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/RealEstates/Details.cshtml
@@ -84,6 +84,6 @@
 
     </dl>
 
-    <a asp-action="Index" asp-controller="realestates" class="btn btn-primary">Back</a>
+    <a asp-action="Index" asp-controller="RealEstates" class="btn btn-primary">Back</a>
 
 </div>
