--- a/TARge21Shop/TARge21Shop/Views/RealEstates/CreateUpdate.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/RealEstates/CreateUpdate.cshtml
@@ -90,22 +90,22 @@ else
             </div>
         </div>
 
-        @*        <div class="form-group row">
-        <label asp-for="Files" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-5">
-        <div class="custom-file">
-        <input class="form-control custom-file-input" asp-for="Files" multiple type="file" />
-        <label class="custom-file-label">Choose File...</label>
-        </div>
-        </div>
+        <div class="form-group row">
+            <label asp-for="Files" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <div class="custom-file">
+                    <input class="form-control custom-file-input" asp-for="Files" multiple type="file" />
+                    <label class="custom-file-label">Choose File...</label>
+                </div>
+            </div>
         </div>
         <hr />
 
-        @foreach (var images in Model.Image)
+        @foreach (var images in Model.FileToApiViewModels)
         {
-        <partial name="_Images" model="images" />
-        <input asp-action="removeImage" asp-controller="spaceships" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image" />
-        }*@
+            <partial name="_Images" model="images" />
+            @*<input asp-action="removeImage" asp-controller="spaceships" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image" />*@
+        }
 
         <hr />
 
@@ -123,7 +123,7 @@ else
     </form>
 </div>
 
-@*@section Scripts
+@section Scripts
     {
     <script>
         $(document).ready(function () {
@@ -139,4 +139,4 @@ else
             });
         });
     </script>
-}*@
+}
