OpenWeatherApi now shows weather info for Tamsalu

--- a/TARge21Shop/TARge21Shop/Views/WeatherForecasts/City.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/WeatherForecasts/City.cshtml
@@ -121,4 +121,5 @@
             @Html.DisplayFor(model => model.NightPrecipitationIntensity)
         </div>
     </dl>
+    <a asp-action="index" class="btn btn-primary">Back</a>
 </div>
