--- a/TARge21Shop/TARge21Shop/Views/WeatherForecasts/Index.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/WeatherForecasts/Index.cshtml
@@ -1,11 +1,24 @@
 ﻿<form method="post">
     <div class="form-group col-md-offset-7 col-md-7">
-        <h2>Search the weather forecast for Tallinn</h2>
+        <h3>Search the weather forecast for Tallinn via AccuWeather</h3>
     </div>
     <br />
     <div class="container">
         <div class="form-group col-md-offset-3 col-md-5">
-            <button asp-controller="WeatherForecasts" asp-action="ShowWeather" class="btn btn-primary">Push button</button>
+            <button asp-controller="WeatherForecasts" asp-action="ShowWeather" class="btn btn-primary">Search</button>
         </div>
     </div>
 </form>
+<hr>
+<form method="post">
+    <div class="form-group col-md-offset-7 col-md-7">
+        <h3>Search the weather forecast for Tamsalu via OpenWeather</h3>
+    </div>
+    <br />
+    <div class="container">
+        <div class="form-group col-md-offset-3 col-md-5">
+            <button asp-controller="WeatherForecasts" asp-action="ShowOpenWeather" class="btn btn-primary">Search</button>
+        </div>
+    </div>
+</form>
+
